--- a/partials/view1.html
+++ b/partials/view1.html
@@ -1,10 +1,10 @@
 <div class="container">
     <h2>View First</h2> Name:
     <br/>
-    <input type="text" ng-model="filter.name">
+    <input type="text" ng-model="filter.name"/>
     <br/>
     <ul>
-        <li ng-repeat="cust in customer | filter:filter.name | orderBy:'city'"/>
+        <li ng-repeat="cust in customers | filter:filter.name | orderBy:'city'"/>
     </ul>
     <!--
 		I'm going to make it so that under each customer we can enter a customer name
