--- a/partials/view1.html
+++ b/partials/view1.html
@@ -4,7 +4,9 @@
     <input type="text" ng-model="filter.name"/>
     <br/>
     <ul>
-        <li ng-repeat="cust in customers | filter:filter.name | orderBy:'city'"/>
+        <li ng-repeat="cust in customers | filter:filter.name | orderBy:'city'">
+            {{ cust.name }} - {{ cust.city }}
+        </li>
     </ul>
     <!--
 		I'm going to make it so that under each customer we can enter a customer name
