--- a/partials/view2.html
+++ b/partials/view2.html
@@ -5,6 +5,8 @@
     <input type="text" ng-model="city">
     <br/>
     <ul>
-        <li ng-repeat="cust in customers | filter: city | orderBy:'name'">
+    	<li ng-repeat="cust in customers | filter: city | orderBy:'name'">
+    		{{ cust.name }} - {{ cust.city }}
+    	</li>
     </ul>
 </div>
